# MMCIF_SITEGEN HISTORY
11-Mar-2018  V0.10 - Py2->Py3 and refactored for python packaging tools
29-Dec-2020  V0.20 - Refactor for new website deployment, Py39, & Azure pipelines
30-Dec-2020  V0.21 - Added workflow, cli and related tests
31-Dec-2020  V0.22 - Avoid directory purge on image generation
 1-Jan-2021  V0.23 - Handle missing categories in extension dictionaries within category images.
 1-Jan-2021  V0.24 - Add NX_Mapping details for cif_img.dic
10-Jan-2023  V0.25 - Configuration changes to support tox 4, graphviz env variable for testing
06-Feb-2024  V0.26 - Properly render pdbx_item_description.
26-Feb-2025  V0.27 - Correct spelling in rendered page